--- a/frontend/src/components/SideDrawer.css
+++ b/frontend/src/components/SideDrawer.css
@@ -7,9 +7,42 @@
   left: 0;
   z-index: 200;
   transform: translateX(-100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   transition: all 0.3s ease-in-out;
 }
 
 .sidedrawer.show {
   transform: translateX(0);
+}
+
+.sidedrawer__links > li {
+  display: flex;
+  align-items: center;
+}
+
+.sidedrawer__links {
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+}
+
+.sidedrawer__links > li > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+  color: #f72585;
+  font-size: 2rem;
+  flex: 1;
+  transition: 0.2s ease-in-out;
+}
+.sidedrawer__links > li > a:hover {
+  background-color: #f72585;
+  color: #f4f4f4;
 }
