--- a/frontend/src/screens/LoginScreen.css
+++ b/frontend/src/screens/LoginScreen.css
@@ -50,15 +50,21 @@
   font-size: 25px;
 }
 .email__section > input {
+  border: 2px solid black;
   padding: 12px;
+  font-size: 16px;
   width: 350px;
+  border-radius: 5px;
   outline: none;
+}
+
+.email__section > input:focus {
+  border: 2px solid #f72585;
 }
 
 .signin__btn {
   color: white;
-  font-size: 17px;
-
+  font-size: 20px;
   background-color: #f72585;
   border-radius: 5px;
   border: 1px solid #f72585;
