--- a/frontend/src/screens/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen.css
@@ -1,7 +1,8 @@
 .homescreen {
+  /* margin-top: 2rem; */
   max-width: 1600px;
   color: white;
-  margin: 1rem auto;
+  margin: 75px auto;
 }
 
 .homescreen__title {
