--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,12 +1,14 @@
 .navbar {
   width: 100%;
-  background-color: transparent;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   color: white;
   display: flex;
   justify-content: space-between;
   padding: 1.5rem 1.5rem;
   align-items: center;
   z-index: 50;
+  position: fixed;
+  top: 0;
 }
 
 .navbar__logo > a {
@@ -14,7 +16,7 @@
   text-decoration: none;
   font-weight: 700;
   font-size: 3rem;
-  padding-left: 3.5rem;
+  padding-left: 1rem;
   cursor: pointer;
 }
 
