--- a/frontend/src/screens/FavouritesScreen.css
+++ b/frontend/src/screens/FavouritesScreen.css
@@ -1,5 +1,7 @@
 .favouritesScreen {
-  height: fit-content;
+  margin: 73px auto;
+  width: 100%;
+  height: 100%;
   color: white;
   display: flex;
   flex-direction: column;
@@ -10,6 +12,7 @@
 }
 
 .favourite__empty {
+  margin: 2rem auto;
   color: #fff;
   font-weight: 700;
   font-size: 105px;
